swagger and validation profil

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # TIMEZONE (IMPORTANT)
 # ===============================
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+springdoc.swagger-ui.enabled=true
